# th8-dcc-backend-v2

./: .gitignore  README.md  pyproject.toml  requirements.txt  verify_logic.py
app/: bootstrap.py  dependencies.py  lifecycle.py  main.py  requirements.txt
app/api/: audit.py  cases.py  copilot.py  copilot_rag.py  decisions.py  decisions_org.py  decisions_v1.py  demo.py  evidence.py  ingestion.py  main.py  router.py
app/core/: config.py
app/data/: mock_contracts.json
app/db/: insert_mock_evidence.py  supabase_client.py
app/models/: schemas.py
app/policies/: credit_policy_v1.yaml  pricing_policy_v1.yaml  procurement_policy_v3.yaml
app/repositories/: __init__.py  audit_base.py  base.py  base_ingestion.py  copilot_rag_repo.py  copilot_repo_bk.py  memory_repo.py  rag_repo.py  supabase_audit_repo.py  supabase_ingestion.py  supabase_repo.py
app/schemas/: audit.py  case.py  decision.py  dynamic.py  ingestion.py  portfolio.py
app/services/: audit_service.py  copilot_agent.py  copilot_agent_v1.py  copilot_orchestrator.py  copilot_stream_service.py  decision_action_service.py  decision_engine.py  decision_engine_v1.py  decision_status_service.py  decision_trigger_service.py  demo_loader.py  evidence_retriever.py  evidence_service.py  ingestion_service.py  ingestion_service_bk.py  orchestrator.py  policy_loader.py  rag_query_service.py  seed_data_loader.py  storage.py
app/tests/: test_copilot_run.py  test_decisions_regression.py
app/utils/: currency_utils.py  id_generator.py  json_utils.py  llm_utils.py  logger.py  pdf_utils.py  retry_utils.py  security_utils.py  (+1 more)
(+11 files in other folders)
